# CsSqlite

./: CsSqlite.slnx  Directory.Build.Props  README.md  README_JA.md
sandbox/Benchmark/: Benchmark.csproj  Benchmarks.cs  Program.cs
sandbox/ConsoleApp1/: ConsoleApp1.csproj  Program.cs
src/CsSqlite/: CsSqlite.csproj  SpliteParameters.cs  SqliteCommand.cs  SqliteConnection.cs  SqliteException.cs  SqliteReader.cs  SqliteType.cs
src/CsSqlite.Native/: Constants.cs  CsSqlite.Native.csproj  NativeMethods.DllImportResolver.g.cs  NativeMethods.g.cs
src/CsSqlite.Unity/Assets/: Sandbox.cs
src/CsSqlite.Unity/Assets/CsSqlite.Unity/: package.json
src/CsSqlite.Unity/Assets/CsSqlite.Unity/Native/: CsSqlite.Native.asmdef  NativeMethods.g.cs
src/CsSqlite.Unity/Assets/CsSqlite.Unity/Native/Plugins/sqlite-android-3500400/: sqlite-android-3500400.aar
src/CsSqlite.Unity/Assets/CsSqlite.Unity/Runtime/: CsSqlite.Unity.asmdef
src/CsSqlite.Unity/Assets/Scenes/: SampleScene.unity
src/CsSqlite.Unity/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
src/CsSqlite.Unity/ProjectSettings/: ProjectSettings.asset
src/CsSqlite/Internal/: PooledUtf8String.cs
src/codegen/: Cargo.toml  build.rs
src/codegen/native/: sqlite3.h
src/codegen/src/: lib.rs  sqlite3.rs  sqlite3_csbindgen.rs
