[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[lib]
name = "sqlite3"
crate-type = ["staticlib", "dylib"]

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.38"
csbindgen = { path = "/Users/yusuke/Desktop/Projects/Clones/csbindgen/csbindgen" }

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-unknown-linux-gnu-gcc"